Funções adicionadas ao AppdDelegate

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -63,6 +63,10 @@ target 'Runner' do
 
   # Keep pod path relative so it can be checked into Podfile.lock.
   pod 'Flutter', :path => 'Flutter'
+  pod 'ZendeskChatSDK'
+  pod 'ZDCChat'
+  pod 'ZendeskSupportSDK'
+  pod 'ZendeskAnswerBotSDK'
 
   # Plugin Pods
 
